# bag2proto

./: .gitignore  CMakeLists.txt  package.xml  read.py  readme.md  write.py
ros_proto/: Header.proto  LaserScan.proto  Time.proto  autogen.py  remove.sh
src/: pub.cc  read.cc
