<?xml version="1.0"?>
<package format="2">
  <name>bag2proto</name>
  <version>0.0.0</version>
  <description>The bag2proto package</description>

  <maintainer email="scj@todo.todo">scj</maintainer>

  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <!-- <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>   -->

    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
